# Greedy_Cross_CPP

./: CMakeLists.txt  README.md  clion-Debug-log.txt
cmake/: CMakeLists.txt
include/: greedy_cross.h  maxvol.h  parameters.h  sweep.h
src/: main.cpp
tests/: test_functions.h
utility/: change_vector_type.h  info.h  timing.h  vector_concatenation.h
